# AI-Second-Brain

./: .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json
backend/: README.md  alembic.ini  pyproject.toml
backend/ai_second_brain_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_email_verification_codes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py  utils.py
backend/app/api/routers/: __init__.py
backend/app/api/routers/v1/: __init__.py  auth.py  chat.py  files.py  folders.py  tasks.py
backend/app/core/: config.py  database.py  security.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  conversation.py  email_verification_code.py  file.py  file_chunk.py  folder.py  message.py  tag.py  task.py  user.py
backend/app/repositories/: chunks.py  conversations.py  email_verification_codes.py  files.py  folders.py  messages.py  tasks.py  users.py
backend/app/schemas/: auth.py  chat.py  citation.py  common.py  files.py  folders.py  tasks.py
backend/app/services/: auth_service.py  chat_service.py  citation_validator.py  email_service.py  email_verification_service.py  file_service.py  folder_service.py  ingestion_service.py  storage_service.py  task_service.py
backend/app/tasks/: background.py
backend/tests/integration/: test_api_flow_txt.py
backend/tests/unit/: test_citation_validator.py
docs/: API.md  PRD.md  RESEARCH.md  TECH_DESIGN.md  database.md
frontend/: package-lock.json  (+1 more)
(+31 files in other folders)
